# cppcon-parallelism-class

./: CMakeLists.txt  README.md
cmake/: FindComputeCpp.cmake
docs/: sycl_00_setting_up_computecpp.md  sycl_01_configuring_a_queue.md  sycl_02_hello_world.md  sycl_03_vector_add.md  sycl_04_image_grayscale.md  sycl_05_transpose.md
examples/: CMakeLists.txt  async.cpp  gpu_reduce.cpp  gpu_transform.cpp  gpu_transform_reduce.cpp  hello_world.cpp  mutex_deadlock_single_lock.cpp  mutex_deadlock_unique_lock.cpp  mutex_unprotected_data_access.cpp  mutext_lock_ordering_deadlock.cpp  parallel_inclusive_scan.cpp  parallel_reduce.cpp  parallel_transform.cpp  parallel_transform_reduce.cpp  promise_exception.cpp  sequential_inclusive_scan.cpp  sequential_reduce.cpp  sequential_transform.cpp  sequential_transform_reduce.cpp  sycl_device_selector.cpp  sycl_vector_add.cpp  thread_detach.cpp  verify_sycl.cpp
examples/01_benchmarking/: 01_benchmarking.cpp
examples/02_sequential_transform/: 02_sequential_transform.cpp
examples/03_sequential_accumulate/: 03_sequential_accumulate.cpp
examples/04_sequential_inclusive_scan/: 04_sequential_inclusive_scan.cpp
examples/06_parallel_transform/: 06_parallel_transform.cpp
examples/parallel_reduce/: parallel_reduce.cpp
examples/parallel_transform/: parallel_transform.cpp
examples/sequential_inclusive_scan/: sequential_inclusive_scan.cpp
examples/sequential_reduce/: sequential_reduce.cpp
examples/sequential_transform/: sequential_transform.cpp
examples/sequential_transform_reduce/: sequential_transform_reduce.cpp
include/: benchmark.h  cppcon_solution  parallel_transform.h  sequential_accumulate.h  sequential_inclusive_scan.h  sequential_transform.h  std_execution  utils.h
include/bits/: gpu_reduce.h  gpu_transform.h  gpu_transform_reduce.h  parallel_inclusive_scan.h  parallel_reduce.h  parallel_transform.h  parallel_transform_reduce.h  policies.h  sequential_inclusive_scan.h  sequential_reduce.h  sequential_transform.h  sequential_transform_reduce.h  sycl_policy.h
samples/: CMakeLists.txt
solutions/: CMakeLists.txt  sycl_03_vector_add.cpp  sycl_04_image_grayscale.cpp  sycl_05_transpose.cpp
source/: CMakeLists.txt
